# best-ever-msr-driver

./: .gitignore  Cargo.toml  Makefile.toml  build.rs
.cargo/: config.toml
src/: debug.rs  device.rs  driver.rs  error.rs  io.rs  kernel_allocator.rs  kernel_module.rs  lib.rs  msr.rs  symbolic_link.rs  utils.rs
